# mobilenet

./: .gitignore  CMakeLists.txt  GVSOC_EMUL.mk  GVSOC_EMUL_SCRIPT.sh  Kconfig  Makefile  README.md  benchmark.py  blabla.py  common.cmake  common.mk  control_client.py  dataanlysis.py  debug.c  emul.mk  gap8_server.py  gap_server.py  gaptest.yml  gui.py  gui_file.py  main.c  main.h  main_emul.c  main_fp16.c  main_test_emul.c  mobilenet.h  mobilenet_v1_0_25_128_quant.h  mobilenet_v1_0_25_160_quant.h  mobilenet_v1_0_25_192_quant.h  mobilenet_v1_0_25_224_quant.h  mobilenet_v1_0_5_128_quant.h  mobilenet_v1_0_5_160_quant.h  mobilenet_v1_0_5_224_quant.h  mobilenet_v1_0_75_160_quant.h  mobilenet_v1_0_75_224_quant.h  mobilenet_v1_1_0_128_quant.h  mobilenet_v1_1_0_160_quant.h  mobilenet_v1_1_0_192_quant.h  mobilenet_v2_1_0_224_quant.h  mobilenet_v2_1_0_224_quant_emul  (+33 more)
NanoImageServer/: image_generator.py  image_generator_socket.py  img_server.py  start_img_server.sh
NanoImageServer/htdocs/: detect_socket.html  index.html
accuracy_on_validation_data/: README.md  accuracy_tflite_models.py  emul.mk  main_emul.c  test_tflite.py
cam/: cam.c  cam.h
common/: model_decl.mk  model_rules.mk
common/headers/: mcunet_imagenet_best.h  mobilenet_v1_0_25_128_quant.h  mobilenet_v1_0_25_160_quant.h  mobilenet_v1_0_25_192_quant.h  mobilenet_v1_0_25_224_quant.h  mobilenet_v1_0_5_128_quant.h  mobilenet_v1_0_5_160_quant.h  mobilenet_v1_0_5_192_quant.h  mobilenet_v1_0_5_224_quant.h  mobilenet_v1_0_75_128_quant.h  mobilenet_v1_0_75_160_quant.h  mobilenet_v1_0_75_192_quant.h  mobilenet_v1_0_75_224_quant.h  mobilenet_v1_1_0_128_quant.h  mobilenet_v1_1_0_160_quant.h  mobilenet_v1_1_0_192_quant.h  mobilenet_v1_1_0_224_quant.h  mobilenet_v1_prefix.h  mobilenet_v2_0_5_128_quant.h  mobilenet_v2_0_5_160_quant.h  mobilenet_v2_0_5_192_quant.h  mobilenet_v2_0_5_224_quant.h  mobilenet_v2_0_5_96_quant.h  mobilenet_v2_0_75_128_quant.h  mobilenet_v2_0_75_160_quant.h  mobilenet_v2_0_75_192_quant.h  mobilenet_v2_0_75_224_quant.h  mobilenet_v2_0_75_96_quant.h  mobilenet_v2_1_0_128_quant.h  mobilenet_v2_1_0_160_quant.h  mobilenet_v2_1_0_192_quant.h  mobilenet_v2_1_0_224_quant.h  mobilenet_v2_1_0_224_quant_emul  mobilenet_v2_1_0_96_quant.h  mobilenet_v2_1_4_224_quant.h  mobilenet_v2_prefix.h  mobilenet_v3_large_1_0_224_quant.h  mobilenet_v3_large_minimalistic_1_0_224_quant.h  mobilenet_v3_small_1_0_224_quant.h  squeezenet.h
common/src/: ImgIO.c  ImgIO.h
dataset_conversion/: generate_synset.py
docker/: gap_sdk.Dockerfile  make.sh  make_nano.sh  nano.Dockerfile  run.sh
esp32_basic/: esp32_basic.ino
gap/: Makefile  burn.sh  burn_run.sh  main.c  make_run.sh  prefix.nntool  prefix.onnx  run.sh
gap/cam/: cam.c  cam.h
gap/models/nntool_scripts/: nntool_script_prefix
gap/spi-wifi/: spi_wifi.c
gap/spi-wifi/spi_slave/: spi_slave.ino
gap/spi-wifi/test/: Makefile  SocketServer.py
headers/: prefix.h
images/: ILSVRC2012_val_00047406_144.ppm
models/: download_models.sh  from_pb_to_tflite_quant.py  mobilenet_v1_0_5_192_quant.tflite  mobilenet_v1_0_5_224_quant.tflite  mobilenet_v1_0_75_128_quant.tflite  mobilenet_v1_0_75_160_quant.tflite  mobilenet_v2_0_5_128_quant.tflite  mobilenet_v2_0_5_160_quant.tflite  mobilenet_v2_0_5_192_quant.tflite  mobilenet_v2_0_5_224_quant.tflite  mobilenet_v2_0_5_96_quant.tflite  mobilenet_v2_0_75_128_quant.tflite  mobilenet_v2_0_75_160_quant.tflite  mobilenet_v2_0_75_192_quant.tflite  mobilenet_v2_0_75_224_quant.tflite  mobilenet_v2_0_75_96_quant.tflite  mobilenet_v2_1_0_128_quant.tflite  mobilenet_v2_1_0_160_quant.tflite  mobilenet_v2_1_0_192_quant.tflite  mobilenet_v2_1_0_96_quant.tflite  nntool_script  nntool_script_emul  nntool_script_mbv1  nntool_script_mbv2  nntool_script_quant  nntool_script_test  parse_at_logs.py  predict_nntool.py  squeezenet_quant.tflite  test_accuracy_nntool.py  test_accuracy_tflite.py  tflite_inference.py
models/nntool_scripts/: nntool_script  nntool_script_emul  nntool_script_fp16  nntool_script_hwc  nntool_script_hwc_fp16  nntool_script_mbv1  nntool_script_mbv2  nntool_script_mbv3_small_ne16  nntool_script_ne16  nntool_script_prefix  nntool_script_with_quantization  predict_script
models/tflite_models/: mcunet_imagenet_best.tflite  mobilenet_v1_prefix.onnx  mobilenet_v2_1_0_224_quant.tflite  mobilenet_v2_prefix.onnx  prefix.onnx
nano/: inference.py  nano_det_server.py  network.py  run.sh  server.py  trt_detector.py
nano/docker/: make.sh  run.sh
nano/utils/: inference.py
spi-wifi/: Makefile  README.md  SocketServer.py  SocketServerJPEG.py  spi_master.c  spi_wifi.c  spi_wifi.h
spi-wifi/spi_slave/: spi_slave.ino
spi_slave_basic/: spi_slave_basic.ino
test_gvsoc_emul/: gvsoc_vs_emul.c  parseout.py
utils/: fix.py  inference.py  network.py  qclient.py
utils_measures/: LogAnalytics.py  editlog.py  new_log_parser.py  parserLog.py  ps4444Measure.py
validation_on_emul/: README.md  emul.mk  main_emul.c
validation_on_emul/dataset_conversion/: ppm_dataset_generator.py
web/: run.sh
web/htdocs/: index.html
